--- a/templates/index-template.html
+++ b/templates/index-template.html
@@ -37,8 +37,8 @@
 
             <#INCLUDE ../README.md>
             <hr>
-            <#INCLUDE ../summer-survey.md>
-            <#INCLUDE ../fall-survey.md>
+            <#INCLUDE ../field-work/summer-survey.md>
+            <#INCLUDE ../field-work/fall-survey.md>
             <#INCLUDE ../life-under-the-waves.md>
 
           </div>
