use common styles

--- a/templates/index-template.html
+++ b/templates/index-template.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8">
     <!-- CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://kylepollina.github.io/styles.css">
     <!-- Scripts -->
     <title>earthscience</title>
   </head>
